cli/tests/ui/use_requires_feature.stderr
Error: manifest::section_requires_feature

  × check failed
  ╰─▶ governance `use` section requires experimental feature `governance`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/use_requires_feature.json5:3:3]
 2 │   manifest_version: "0.1.0",
 3 │   use: {
   ·   ─┬─
   ·    ╰── `use` section used here
 4 │     wrapper: "./use_requires_feature_wrapper.json5",
   ╰────
  help: Add this feature to `experimental_features` in the same manifest, or
        remove this section.
